<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >
   <Button 
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_margin="5dp"
        android:background="@drawable/back_bg"
        android:text="@string/button_back"
        android:textColor="#fff"/>
    <TextView
        android:id="@+id/text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:background="@drawable/title_bg"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:gravity="center" 
        android:text="@string/titile_text"
        android:textColor="#fff"
        android:textSize="24sp"/>
    <Button
        android:id="@+id/button_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_margin="5dp"
        android:background="@drawable/edit_bg"
        android:text="@string/button_edit"
        android:textColor="#fff"/>
    

</LinearLayout>
